# goldberg_emulator

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build_env_x64.bat  build_env_x86.bat  build_linux.sh  build_linux_debug.sh  build_linux_release.sh  build_set_protobuf_directories.bat  build_win_debug_experimental.bat  build_win_debug_experimental_steamclient.bat  build_win_debug_lobby_connect.bat  build_win_find_interfaces.bat  build_win_lobby_connect.bat  build_win_release.bat  build_win_release_experimental.bat  build_win_release_experimental_steamclient.bat  generate_all_deps.bat  generate_build_win.bat  generate_build_win_bat.py  lobby_connect.cpp  steamnetworkingsockets.cpp
controller/: gamepad.c  gamepad.h
dll/: appticket.h  base.cpp  base.h  common_includes.h  dll.cpp  dll.h  flat.cpp  item_db_loader.cpp  item_db_loader.h  json.h  json_parser.cpp  json_value.h  local_storage.cpp  local_storage.h  net.proto  network.cpp  network.h  settings.cpp  settings.h  settings_parser.cpp  settings_parser.h  steam_HTMLsurface.h  steam_applist.h  steam_apps.h  steam_client.cpp  steam_client.h  steam_controller.h  steam_friends.cpp  steam_friends.h  steam_game_coordinator.h  steam_gamesearch.h  steam_gameserver.h  steam_gameserverstats.h  steam_http.h  steam_inventory.h  steam_masterserver_updater.h  steam_matchmaking.h  steam_matchmaking_servers.cpp  steam_matchmaking_servers.h  steam_music.h  (+20 more)
dsound/: CMakeLists.txt  dsound.cpp
hooking/: CMakeLists.txt
overlay_experimental/: Renderer_Detector.cpp  Renderer_Detector.h  internal_includes.h  (+2 more)
(+10 files in other folders)
